--- a/McDonalds.ipynb
+++ b/McDonalds.ipynb
@@ -133,7 +133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f1db786227b4b6296f1bf3f75414a71",
+       "model_id": "322931aeb0484812af456720bd3a1e46",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1647,7 +1647,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fbd67cb8790>"
+       "<matplotlib.collections.PathCollection at 0x7f9e2f275510>"
       ]
      },
      "execution_count": 25,
