Add Milestone2 file with future analysis.

--- a/rentData.ipynb
+++ b/rentData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[5 rows x 73 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "[5 rows x 73 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
        "[250 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
        "4  California"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1175,7 @@
        "Text(0, 0.5, 'rent price.')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
        "Text(0, 0.5, 'rent price.')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1272,13 +1272,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Price_2018_Studio</th>\n",
+       "      <th>Price_2018_1br</th>\n",
+       "      <th>Price_2018_2br</th>\n",
+       "      <th>Price_2018_3br</th>\n",
+       "      <th>Price_2018_4br</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>605.416667</td>\n",
+       "      <td>659.000000</td>\n",
+       "      <td>800.666667</td>\n",
+       "      <td>1069.666667</td>\n",
+       "      <td>1244.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>814.333333</td>\n",
+       "      <td>930.500000</td>\n",
+       "      <td>1190.333333</td>\n",
+       "      <td>1682.166667</td>\n",
+       "      <td>2019.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>701.000000</td>\n",
+       "      <td>828.000000</td>\n",
+       "      <td>1046.000000</td>\n",
+       "      <td>1512.333333</td>\n",
+       "      <td>1754.416667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>524.666667</td>\n",
+       "      <td>571.166667</td>\n",
+       "      <td>721.416667</td>\n",
+       "      <td>977.583333</td>\n",
+       "      <td>1144.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>California</td>\n",
+       "      <td>1212.333333</td>\n",
+       "      <td>1426.333333</td>\n",
+       "      <td>1818.916667</td>\n",
+       "      <td>2519.250000</td>\n",
+       "      <td>2926.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        State  Price_2018_Studio  Price_2018_1br  Price_2018_2br  \\\n",
+       "0     Alabama         605.416667      659.000000      800.666667   \n",
+       "1      Alaska         814.333333      930.500000     1190.333333   \n",
+       "2     Arizona         701.000000      828.000000     1046.000000   \n",
+       "3    Arkansas         524.666667      571.166667      721.416667   \n",
+       "4  California        1212.333333     1426.333333     1818.916667   \n",
+       "\n",
+       "   Price_2018_3br  Price_2018_4br  \n",
+       "0     1069.666667     1244.333333  \n",
+       "1     1682.166667     2019.500000  \n",
+       "2     1512.333333     1754.416667  \n",
+       "3      977.583333     1144.833333  \n",
+       "4     2519.250000     2926.333333  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#saving output\n",
-    "output = output[[\"Location\", \"Price_2018_Studio\", \"Price_2018_1br\", \"Price_2018_2br\", \"Price_2018_3br\", \"Price_2018_4br\"]]\n",
-    "output.to_pickle('Pickles/rent.pickle')"
+    "output = output.rename(columns = {\n",
+    "    \"Location\": \"State\"\n",
+    "})\n",
+    "output = output[[\"State\", \"Price_2018_Studio\", \"Price_2018_1br\", \"Price_2018_2br\", \"Price_2018_3br\", \"Price_2018_4br\"]]\n",
+    "output.head()\n",
+    "#output.to_pickle('Pickles/rent.pickle')"
    ]
   },
   {
@@ -1291,9 +1395,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:ada] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ada-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1309,5 +1413,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
