--- a/csv_datasets.ipynb
+++ b/csv_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4           56.3 - 75.0                          1.5519  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "Name: 73108, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4           56.3 - 75.0                          1.5519  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "4  Alabama  Autauga County                206.0             73.1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "[245 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "California        80.231014"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "Wisconsin            79.98"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "California        80.231014"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "California        80.231014"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "Text(0, 0.5, 'Number of states')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
        "New York             80.326875"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
        "Kentucky           75.564402"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
        "[186 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1339,7 @@
        "4                            Population (persons) 1/    4887871.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
        "Arkansas                  39171.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
        "Arkansas          3013825.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
        "Arkansas          3013825.0            39171.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1707,7 @@
        "4       Arkansas    3013825.0            39171.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1725,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1805,7 @@
        "California  39557045.0            54800.0        80.231014"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1900,7 @@
        "New York              19542209.0            58005.0        80.326875"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1912,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -1992,7 +1992,7 @@
        "Alabama         4887871.0            38215.0        74.813987"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
        "Text(0, 0.5, 'Number of states')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -2271,7 +2271,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2297,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -2383,7 +2383,7 @@
        "4                 JUNIOR COLLEGES  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2406,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -2472,7 +2472,7 @@
        "CA                            264"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2487,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -2553,7 +2553,7 @@
        "AZ                       43"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2568,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -2634,7 +2634,7 @@
        "CA                              239"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2651,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -2739,7 +2739,7 @@
        "AZ                             42.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2753,7 +2753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -2841,7 +2841,7 @@
        "AZ                             42.0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2855,16 +2855,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f75b17efed0>"
+       "<matplotlib.legend.Legend at 0x7f144276dd50>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2905,7 +2905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -3131,7 +3131,7 @@
        "[5 rows x 62 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3156,7 +3156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -3242,7 +3242,7 @@
        "4           132407  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3264,7 +3264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -3337,7 +3337,7 @@
        "California         22.771429     63022.202857"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3350,7 +3350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -3359,7 +3359,7 @@
        "Text(0, 0.5, 'awards per 100 full time students')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3388,7 +3388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -3397,7 +3397,7 @@
        "Text(0, 0.5, 'Expenditure ($) per each award')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3434,7 +3434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -3545,7 +3545,7 @@
        "4      NaN                 6.102  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3566,7 +3566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -3639,7 +3639,7 @@
        "4    Columbia University   New York, NY     5"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3652,7 +3652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -3666,7 +3666,7 @@
        "Name: State, dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3683,7 +3683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -3762,7 +3762,7 @@
        "4    Columbia University   New York, NY     5    NY"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3775,7 +3775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -3848,7 +3848,7 @@
        "4    NY    Columbia University     5"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3861,7 +3861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -3881,7 +3881,7 @@
        "Name: Ranking_points, Length: 231, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3899,7 +3899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -3978,7 +3978,7 @@
        "4    NY    Columbia University     5             226"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3999,7 +3999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4009,7 +4009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -4075,7 +4075,7 @@
        "CA                      3064"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4089,7 +4089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -4098,7 +4098,7 @@
        "Text(0, 0.5, 'Top 230 score')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4142,7 +4142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -4209,7 +4209,7 @@
        "4  California           CA"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4222,7 +4222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -4301,7 +4301,7 @@
        "4         22.771429     63022.202857  California           CA"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4315,7 +4315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -4426,7 +4426,7 @@
        "4                         239.0  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4440,7 +4440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -4557,7 +4557,7 @@
        "4                         239.0                   3064  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4570,7 +4570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -4681,7 +4681,7 @@
        "4                   3064  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4695,7 +4695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -4812,7 +4812,7 @@
        "California                   3064  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4824,7 +4824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -4970,7 +4970,7 @@
        "California                   3064  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4991,10 +4991,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
+    "pop_inc_exp_edu.reset_index(inplace=True)  # Convert the index into the column State\n",
     "pop_inc_exp_edu.to_pickle(\"Pickles/pop_inc_exp_edu.pickle\")"
    ]
   }
