Added some additional features to security analysis

--- a/DataAnalysis_Milestone3.ipynb
+++ b/DataAnalysis_Milestone3.ipynb
@@ -3491,6 +3491,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Things we still need to do\n",
+    "- Implement a ML model on our normalized features to obtain a \"security\" score\n",
+    "- Once this score is calculated, generate a map showing the security score for each state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### References\n",
     "\n",
     "[1] https://en.wikipedia.org/wiki/Human_Development_Index\n",
