ML model weighting procedure updated

--- a/lorisLinearRidgeRegressionAndSVR.ipynb
+++ b/lorisLinearRidgeRegressionAndSVR.ipynb
@@ -825,8 +825,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Variance Ratio 80.1970479189618\n",
-      "R2 value =  0.9922556571087223\n"
+      "Explained Variance Ratio 80.197047918963\n",
+      "R2 value =  0.9922556575306143\n"
      ]
     }
    ],
@@ -848,7 +848,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 value =  0.9922556571087223\n"
+      "R2 value =  0.9922556575306143\n"
      ]
     }
    ],
@@ -923,7 +923,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 value =  0.9950620374150885\n"
+      "R2 value =  0.9950620373927568\n"
      ]
     },
     {
@@ -951,7 +951,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 value =  0.9948865433747988\n"
+      "R2 value =  0.9948865433506434\n"
      ]
     },
     {
@@ -1806,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +1958,7 @@
        "4  0.092013  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2081,7 @@
        "4  0.389112  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2094,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2172,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2200,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2228,7 +2228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2256,7 +2256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2284,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2306,11 +2306,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Weighting linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linReg.fit(X_cat,Y_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Changing weights:\n",
+    "def change_weights(X,estimator,weights,scaling):\n",
+    "    coef = estimator.coef_\n",
+    "    weights_repeated = np.repeat(weights,2)\n",
+    "    weights_mean = weights_repeated.mean()\n",
+    "    weights_new = weights_new = np.exp(weights_repeated)/np.exp(weights_mean)\n",
+    "    coef_weighted = coef * weights_new.T\n",
+    "    estimator.coef_ = coef_weighted\n",
+    "    Y_pred_scaled= estimator.predict(X)\n",
+    "    Y_pred = scaling.inverse_transform(Y_pred_scaled)\n",
+    "    estimator.coef_ = coef\n",
+    "    return Y_pred\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_pred_weights = change_weights(X_cat,linReg,np.array([1,4,3,2]),scaler_y)"
+   ]
   }
  ],
  "metadata": {
