--- a/data_story_and_maps.ipynb
+++ b/data_story_and_maps.ipynb
@@ -620,6 +620,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "shapes": [
          {
           "line": {
@@ -1443,14 +1444,26 @@
          "text": "Number of universities and colleges vs population of a state"
         },
         "xaxis": {
+         "autorange": true,
+         "range": [
+          -1927202.8557993732,
+          42061984.85579938
+         ],
          "title": {
           "text": "Population"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
+         "autorange": true,
+         "range": [
+          -18.26433121019108,
+          283.2643312101911
+         ],
          "title": {
           "text": "number of colleges and universities"
-         }
+         },
+         "type": "linear"
         }
        }
       },
@@ -1777,6 +1790,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "shapes": [
          {
           "line": {
@@ -2600,14 +2614,26 @@
          "text": "High school fees vs population of a state"
         },
         "xaxis": {
+         "autorange": true,
+         "range": [
+          -1927202.8557993732,
+          42061984.85579938
+         ],
          "title": {
           "text": "Population"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
+         "autorange": true,
+         "range": [
+          3286.101910828025,
+          35981.89808917198
+         ],
          "title": {
           "text": "Average High School Fee ($)"
-         }
+         },
+         "type": "linear"
         }
        }
       },
@@ -2947,6 +2973,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "shapes": [
          {
           "line": {
@@ -3770,14 +3797,26 @@
          "text": "Top-230-ranking score vs population of a state"
         },
         "xaxis": {
+         "autorange": true,
+         "range": [
+          -1927202.8557993732,
+          42061984.85579938
+         ],
          "title": {
           "text": "Population"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
+         "autorange": true,
+         "range": [
+          -193.30891719745222,
+          3286.308917197452
+         ],
          "title": {
           "text": "Top-230 score of universities"
-         }
+         },
+         "type": "linear"
         }
        }
       },
@@ -4687,6 +4726,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "barmode": "group",
         "template": {
          "data": {
@@ -5492,6 +5532,22 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "xaxis": {
+         "autorange": true,
+         "range": [
+          -0.5,
+          50.5
+         ],
+         "type": "category"
+        },
+        "yaxis": {
+         "autorange": true,
+         "range": [
+          0,
+          1.0526315789473684
+         ],
+         "type": "linear"
         }
        }
       },
@@ -6553,6 +6609,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "template": {
          "data": {
           "bar": [
@@ -7360,6 +7417,22 @@
         },
         "title": {
          "text": "Correlation among columns of the health dataset"
+        },
+        "xaxis": {
+         "autorange": true,
+         "range": [
+          -0.5,
+          8.5
+         ],
+         "type": "category"
+        },
+        "yaxis": {
+         "autorange": true,
+         "range": [
+          -0.5,
+          8.5
+         ],
+         "type": "category"
         }
        }
       },
@@ -7865,6 +7938,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "shapes": [
          {
           "line": {
@@ -8688,14 +8762,26 @@
          "text": "People not eating vegetables daily vs portions of vegetables consumed daily"
         },
         "xaxis": {
+         "autorange": true,
+         "range": [
+          -0.007491375061606702,
+          2.015179891572203
+         ],
          "title": {
           "text": "Portions of vegetables consumed daily"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
+         "autorange": true,
+         "range": [
+          12.767127937351663,
+          71.19469065706477
+         ],
          "title": {
           "text": "People not eating vegetables daily"
-         }
+         },
+         "type": "linear"
         }
        }
       },
@@ -9030,6 +9116,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "shapes": [
          {
           "line": {
@@ -9853,14 +9940,26 @@
          "text": "Mean obesity rate vs adult obesity rate"
         },
         "xaxis": {
+         "autorange": true,
+         "range": [
+          -0.13997042878265156,
+          37.65204534253327
+         ],
          "title": {
           "text": "Adult obesity rate"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
+         "autorange": true,
+         "range": [
+          10.431274373567772,
+          43.940892253436026
+         ],
          "title": {
           "text": "Mean obesity rate"
-         }
+         },
+         "type": "linear"
         }
        }
       },
@@ -10647,6 +10746,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "shapes": [
          {
           "line": {
@@ -11470,14 +11570,26 @@
          "text": "Number of homeless people vs population in each state"
         },
         "xaxis": {
+         "autorange": true,
+         "range": [
+          -1927202.8557993732,
+          42061984.85579938
+         ],
          "title": {
           "text": "Population"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
+         "autorange": true,
+         "range": [
+          -8938.541401273886,
+          139452.5414012739
+         ],
          "title": {
           "text": "number of homeless people"
-         }
+         },
+         "type": "linear"
         }
        }
       },
@@ -12029,6 +12141,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "template": {
          "data": {
           "bar": [
@@ -12836,6 +12949,22 @@
         },
         "title": {
          "text": "correlation among alchool prevalence and homeless people, and other crimes"
+        },
+        "xaxis": {
+         "autorange": true,
+         "range": [
+          -0.5,
+          1.5
+         ],
+         "type": "category"
+        },
+        "yaxis": {
+         "autorange": true,
+         "range": [
+          -0.5,
+          10.5
+         ],
+         "type": "category"
         }
        }
       },
@@ -13156,6 +13285,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "shapes": [
          {
           "line": {
@@ -13979,14 +14109,26 @@
          "text": "Robberies vs rate of homeless people in each state"
         },
         "xaxis": {
+         "autorange": true,
+         "range": [
+          -14.981359783244265,
+          1043.0900467841604
+         ],
          "title": {
           "text": "Rate of homeless people per 100000 inhabitants"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
+         "autorange": true,
+         "range": [
+          -26.582802547770697,
+          547.5828025477707
+         ],
          "title": {
           "text": "Rate of robberies per 100000 inhabitants"
-         }
+         },
+         "type": "linear"
         }
        }
       },
@@ -14387,6 +14529,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "template": {
          "data": {
           "bar": [
@@ -15194,6 +15337,22 @@
         },
         "title": {
          "text": "Correlation among different kind of crimes"
+        },
+        "xaxis": {
+         "autorange": true,
+         "range": [
+          -0.5,
+          8.5
+         ],
+         "type": "category"
+        },
+        "yaxis": {
+         "autorange": true,
+         "range": [
+          -0.5,
+          8.5
+         ],
+         "type": "category"
         }
        }
       },
@@ -17142,6 +17301,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "shapes": [
          {
           "line": {
@@ -17965,14 +18125,26 @@
          "text": "McDonalds vs disposable personal income"
         },
         "xaxis": {
+         "autorange": true,
+         "range": [
+          -276.6564810251355,
+          74420.59339576146
+         ],
          "title": {
           "text": "Disposable per-capita income"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
+         "autorange": true,
+         "range": [
+          2.6278997886254145,
+          6.886859618836315
+         ],
          "title": {
           "text": "McDonalds vs disposable personal income"
-         }
+         },
+         "type": "linear"
         }
        }
       },
@@ -18631,6 +18803,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "barmode": "group",
         "template": {
          "data": {
@@ -19436,6 +19609,22 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "xaxis": {
+         "autorange": true,
+         "range": [
+          -0.5,
+          50.5
+         ],
+         "type": "category"
+        },
+        "yaxis": {
+         "autorange": true,
+         "range": [
+          0,
+          2.810541065414587
+         ],
+         "type": "linear"
         }
        }
       },
@@ -19781,6 +19970,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "shapes": [
          {
           "line": {
@@ -20616,14 +20806,26 @@
          "text": "School fees vs disposable personal income"
         },
         "xaxis": {
+         "autorange": true,
+         "range": [
+          -276.6564810251355,
+          74420.59339576146
+         ],
          "title": {
           "text": "Disposable per-capita income"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
+         "autorange": true,
+         "range": [
+          -18143.400494703856,
+          37444.44573109255
+         ],
          "title": {
           "text": "School fees"
-         }
+         },
+         "type": "linear"
         }
        }
       },
@@ -21267,6 +21469,7 @@
         }
        ],
        "layout": {
+        "autosize": true,
         "shapes": [
          {
           "line": {
@@ -22090,14 +22293,26 @@
          "text": "Poverty vs criminality"
         },
         "xaxis": {
+         "autorange": true,
+         "range": [
+          -276.6564810251355,
+          74420.59339576146
+         ],
          "title": {
           "text": "Disposable personal income"
-         }
+         },
+         "type": "linear"
         },
         "yaxis": {
+         "autorange": true,
+         "range": [
+          1271.9127388535032,
+          5043.887261146497
+         ],
          "title": {
           "text": "Property crimes average rate"
-         }
+         },
+         "type": "linear"
         }
        }
       },
@@ -22226,9 +22441,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ada-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
